--- a/src/css/_animations.styl
+++ b/src/css/_animations.styl
@@ -5,3 +5,38 @@
   appear Must set transitionAppear={true} on animation component
 */
 
+.order-enter
+  transform translateX(-120%)
+  max-height: 0
+  padding: 0
+  transition all 0.5s ease
+  &.order-enter-active
+    max-height: 60px
+    padding: 2rem 0 !important
+    transform translateX(0%)
+
+.order-leave
+  transform translateX(0%)
+  transition all 0.5s ease
+  &.order-leave-active
+    max-height: 0
+    padding: 0
+    transform translateX(-120%)
+
+// COUNT
+.count-enter
+  transform translateY(100%)
+  background: blue
+  transition all 5s ease
+  &.count-enter-active
+    transform translateY(0%)
+    background red
+
+
+.count-leave
+  transform translateY(0%)
+  background green
+  transition all 5s ease
+  &.count-leave-active
+    transform translateY(100%)
+    background cyan
