--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,51 +1,51 @@
 .order-enter {
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
   -webkit-transform: translateX(-120%);
           transform: translateX(-120%);
   max-height: 0;
-  padding: 0 !important;
+  padding: 0;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
 }
 .order-enter.order-enter-active {
-  -webkit-transform: translateX(0);
-          transform: translateX(0);
   max-height: 60px;
   padding: 2rem 0 !important;
+  -webkit-transform: translateX(0%);
+          transform: translateX(0%);
 }
 .order-leave {
-  -webkit-transition: all 0.5s;
-  transition: all 0.5s;
-  -webkit-transform: translateX(0);
-          transform: translateX(0);
+  -webkit-transform: translateX(0%);
+          transform: translateX(0%);
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
 }
 .order-leave.order-leave-active {
   max-height: 0;
   padding: 0;
-  -webkit-transform: translateX(120%);
-          transform: translateX(120%);
+  -webkit-transform: translateX(-120%);
+          transform: translateX(-120%);
 }
 .count-enter {
-  -webkit-transition: all 0.25s;
-  transition: all 0.25s;
   -webkit-transform: translateY(100%);
           transform: translateY(100%);
+  background: #00f;
+  -webkit-transition: all 5s ease;
+  transition: all 5s ease;
 }
 .count-enter.count-enter-active {
-  -webkit-transform: translateY(0);
-          transform: translateY(0);
+  -webkit-transform: translateY(0%);
+          transform: translateY(0%);
+  background: #f00;
 }
 .count-leave {
-  -webkit-transition: all 0.25s;
-  transition: all 0.25s;
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  -webkit-transform: translateY(0);
-          transform: translateY(0);
+  -webkit-transform: translateY(0%);
+          transform: translateY(0%);
+  background: #008000;
+  -webkit-transition: all 5s ease;
+  transition: all 5s ease;
 }
 .count-leave.count-leave-active {
-  -webkit-transform: translateY(-100%);
-          transform: translateY(-100%);
+  -webkit-transform: translateY(100%);
+          transform: translateY(100%);
 }
 @font-face {
   font-family: "haymakerregular";
